# DungeonGrid

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MAINTENANCE.md  README.md  plans.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: MARL_DUNGEON_CURRICULUM.md  WARDEN_REACT_RUNBOOK.md  action_contract.md  benchmark_protocol.md  dungeon_authoring.md  goblin_dungeon_catalog.md  goblin_mode.md  gotchas.md  observation_contract.md
examples/: evaluate_deterministic_warden.py  evaluate_scripted_policy.py  openai_model_smoke.py  openenv_react_loop.py  warden_react_adapter_stub.py
experiment_notes/: 2026-04-26_lantern-lite-communication-premium.md
src/dungeongrid/: __init__.py  achievements.py  action_contracts.py  baselines.py  client.py  contracts.py  env.py  factory.py  hooks.py  metrics.py  models.py  validation.py  warden.py
src/dungeongrid/container/: __init__.py  app.py  runtime.py  store.py  task_sets.py
src/dungeongrid/core/: __init__.py  agent_engine.py  data.py  effects.py  engine_runtime.py  grid_engine.py  message_implementations.py  message_protocol.py  rules_engine.py  trace.py
src/dungeongrid/dungeons/: __init__.py  hook_recipes.py
src/dungeongrid/dungeons/ashen_pantry/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/ashen_pantry_lite/: quest.json
src/dungeongrid/dungeons/barrow_of_the_hollow_king/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/barrow_of_the_hollow_king_lite/: quest.json
src/dungeongrid/dungeons/bells_under_blackwater/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/bells_under_blackwater_lite/: quest.json
src/dungeongrid/dungeons/black_standard_keep/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/black_standard_keep_lite/: quest.json
src/dungeongrid/dungeons/broken_oath_ambush/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/broken_oath_ambush_lite/: quest.json
src/dungeongrid/dungeons/cinder_exit/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/cinder_exit_lite/: quest.json
src/dungeongrid/dungeons/cinder_mage_tower/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/cinder_mage_tower_lite/: quest.json
src/dungeongrid/dungeons/frost_mirror_hold/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/frost_mirror_hold_lite/: quest.json
src/dungeongrid/dungeons/glass_maze/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/glass_maze_lite/: quest.json
src/dungeongrid/dungeons/hourglass_escape/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/hourglass_escape_lite/: quest.json
src/dungeongrid/dungeons/iron_captive/: README.md  hooks.py  quest.json
src/dungeongrid/dungeons/iron_captive_lite/: quest.json
src/dungeongrid/dungeons/lantern_crypt/: README.md  hooks.py  (+1 more)
src/dungeongrid/quests/: __init__.py  ashen_pantry.json  bells_under_blackwater.json  cinder_exit.json  lantern_crypt.json  low_shrine_locks.json
src/dungeongrid/rendering/: __init__.py  sprite.py  terminal.py
src/dungeongrid/server/: __init__.py  app.py
tests/: test_environment_smoke.py
tools/: communication_premium.py  migrate_remaining_dungeon_families.py
(+235 files in other folders)
